...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="pGg-6v-bdr" id="P41-gY-KXY"/>
                            <outlet property="delegate" destination="pGg-6v-bdr" id="Y6K-Cp-Qkv"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="iOS8 Sampler" id="tQt-TN-PWz"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6Cn-md-YlS" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="605" y="64"/>
        </scene>
    </scenes>
...
